[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "url-extractor-tui"
version = "0.1.0"
description = "A Textual TUI to extract URLs from .txt and .md files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0",
]

[project.scripts]
url-extractor = "app:main"

[tool.setuptools]
py-modules = ["app", "ui", "extractor", "io_utils"]
